2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.1: Update the man page to remove documentation for a now
	non-existent --usage option and freshen up the rest of the
	documentation. (Closes: #548855)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (size_changed_cb):
	When changing screen size through XRandR, update the aspect
	ratio of the visualisation (Closes: #327811)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-functions.sh: Fix a stupid typo
	* data/schemas.sh: Fix another stupid typo,
	and output to fd 3, so we can see the stderr
	* data/Makefile.am: capture fd 3 for the gconf updater
	script
	* data/mime-type-list.txt: Add audio/x-vorbis+ogg to
	the mime-types (Closes: #549038)

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/.htaccess: Add mime-type for
	a test

2008-08-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Remove old debug

2008-08-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(video_widget_size_allocate_cb), (totem_embedded_construct):
	Don't show visuals if the video widget size is under 150 pixels
	(Closes: #542491)

2008-08-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-missing-plugins.h:
	* src/backend/bacon-video-widget-gst-missing-plugins.c
	(bacon_video_widget_gst_missing_plugins_blacklist):
	There's some plugins we just don't want to use, like
	the gst-ffmpeg FLV demuxer (doesn't seek), so blacklist it
	(code from Tim-Philipp Müller <tim.muller at collabora co uk>)

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_init): Call the function above to
	blacklist the ffmpeg FLV demuxer

	* src/plugins/youtube/youtube.py: No need to check for
	the FLV demuxer by hand, we killed the crappy one already,
	launches the plugin install helper when it's missing

	(Closes: #534419)

2008-08-21  Bastien Nocera  <hadess@hadess.net>